<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="shoesViewModel"
            type="com.chuanlim.shoestore.models.ShoesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_editshoename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:text="@string/label_shoe_name"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextShoeName"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLabel" />

        <EditText
            android:id="@+id/editTextShoeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/actor"
            android:hint="Name of the Shoe"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/label_editshoename"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_editSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:text="@string/label_shoe_size"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextSize"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLabel" />

        <EditText
            android:id="@+id/editTextSize"
            android:layout_width="98dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/actor"
            android:hint="8.5"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/label_editSize"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeName" />


        <EditText
            android:id="@+id/editTextCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/actor"
            android:hint="Name e.g., Udacity"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/label_editSize"
            app:layout_constraintTop_toBottomOf="@+id/editTextSize" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="110dp"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/labelCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:text="@string/label_company"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextCompany"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLabel" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/actor"
            android:text="@string/label_description"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextDescription"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLabel"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Enter a shoe description here"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/guidelineLabel"
            app:layout_constraintTop_toBottomOf="@+id/editTextCompany" />

        <Button
            android:id="@+id/saveShoeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84"
            app:layout_constraintStart_toStartOf="@+id/guidelineLabel"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>